--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h4>Hello from Justin</h4>
-		<p>Did you like the course</p>
+		<p>I like cybersecurity, mathematics and IT</p>
         <br>
         <a href="https://edube.org/study" target="_blank">edible python</a>
         <br>
