--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Justin's Personal Page</title>
 	</head>
 	<body>
-		<h4>Hello from Justin</h4>
+		<h4 style="text-align:center;"Hello from Justin</h4>
 		<p style="text-align:center;">I like cybersecurity, mathematics and IT</p>
         <br>
         <a href="https://edube.org/study" target="_blank">edible python</a>
