--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 		<h4 style="text-align:center;"Hello from Justin</h4>
 		<p style="text-align:center;">I like cybersecurity, mathematics and IT</p>
         <br>
-        <a href="https://edube.org/study" target="_blank">edible python</a>
-        <br>
+	<nav id="vertical">
+		<a href="https://edube.org/study" target="_blank">edible python</a>
+		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
+	</nav>
+	<br>
         <br>
 		<form>
 			<div>
