--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<title>Justin's Personal Page</title>
 	</head>
 	<body>
+		<hgoup>
 		<h4 style="text-align:center;"Hello from Justin</h4>
 		<p style="text-align:center;">I like cybersecurity, mathematics and IT</p>
+		</hgoup>
         <br>
 	<nav id="vertical">
 		<a href="https://edube.org/study" target="_blank">edible python</a>
