--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<p style="text-align:center;">I like cybersecurity, mathematics and IT</p>
 		</hgoup>
         <br>
-	<nav id="vertical">
+	<nav id="vertical" style="text-align:left>
 		<a href="https://edube.org/study" target="_blank">edible python</a>
 		<br>
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
