--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 		<p style="text-align:center;">I like cybersecurity, mathematics and IT</p>
 		</hgoup>
         <br>
-	<nav id="vertical" style="text-align:left>
+	<nav id="vertical">
 		<a href="https://edube.org/study" target="_blank">edible python</a>
 		<br>
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
 	<br>
         <br>
-		<form>
+		<form style="text-align:left>
 			<div>
 				<input type="text" id="courseName">
 			</div>
