--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</nav>
 	<br>
         <br>
-		<form style="text-align:left>
+		<form style="text-align:center>
 			<div>
 				<input type="text" id="courseName">
 			</div>
