--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<hgoup>
-		<h4 style="text-align:center;"Hello from Justin</h4>
+		<h4 style="text-align:center;">Hello from Justin</h4>
 		<p style="text-align:center;">I like cybersecurity, mathematics and IT</p>
 		</hgoup>
         <br>
