--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 		<br>
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
+	<h4>EDUCATION</h4>
+	<br>
+	<h4>WORK EXPERIENCE</h4>	
 	<br>
         <br>
 		<form>
