--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br>
 	<h4>CERTIFICATIONS</h4>
         <br>
-		<form>
+	<!--	<form>  
 			<div>
 				<input type="text" id="courseName">
 			</div>
@@ -33,6 +33,7 @@
 			<div>
 				<button>Send</button>
 			</div>
-		</form>
+		</form>  
+	-->
 	</body>
 </html>
