--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
 	<h4>EDUCATION</h4>
+		<ul>
+			<li>MS in Mathematics from Towson University</li>
+			<li>BS in Mathematics from Towson UNiversity</li>
+		</ul>
 	<br>
 	<h4>WORK EXPERIENCE</h4>	
 	<br>
