--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br>
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
-	<h1>EDUCATION</h1>
+	<p>EDUCATION</p>
 		<ul>
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson UNiversity</li>
