--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		<br>
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
-	<p>EDUCATION</p>
+	<p style="font-size:150%">EDUCATION</p>
 		<ul>
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson UNiversity</li>
 		</ul>
 	<br>
-	<h4>WORK EXPERIENCE</h4>	
+	<h2>WORK EXPERIENCE</h2>	
 	<br>
 	<h4>CERTIFICATIONS</h4>
         <br>
