--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br>
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
-	<p style="font-size:150%">EDUCATION</p>
+	<p style="margin:0">EDUCATION</p>
 		<ul>
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson UNiversity</li>
