--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="https://https://www.towson.edu/" target="_blank">Towson University</a>  
 	</nav>
 	<br>
-	<p style="margin:0">EDUCATION</p>
+	<h2 style="margin:0">EDUCATION</h2>
 		<ul>
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson UNiversity</li>
