--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</nav>
 	<br>
 	<h2 style="margin:0">EDUCATION</h2>
-		<ul>
+		<ul style="margin:0">
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson UNiversity</li>
 		</ul>
