--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson UNiversity</li>
 		</ul>
-	<br>
-	<h2>WORK EXPERIENCE</h2>	
-	<br>
+	<h2 style="margin:0">WORK EXPERIENCE</h2>	
 	<h4>CERTIFICATIONS</h4>
         <br>
 	<!--	<form>  
