--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<h2 style="margin:0">EDUCATION</h2>
 		<ul style="margin:0">
 			<li>MS in Mathematics from Towson University</li>
-			<li>BS in Mathematics from Towson UNiversity</li>
+			<li>BS in Mathematics from Towson University</li>
 		</ul>
 	<h2 style="margin:0">WORK EXPERIENCE</h2>	
-	<h4>CERTIFICATIONS</h4>
+	<h2 style="margin:0">CERTIFICATIONS</h2>
         <br>
 	<!--	<form>  
 			<div>
