--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 			<li>MS in Mathematics from Towson University</li>
 			<li>BS in Mathematics from Towson University</li>
 		</ul>
-	<h2 style="margin:0">WORK EXPERIENCE</h2>	
+	<h2 style="margin:0">WORK EXPERIENCE</h2>
+		<ul style="margin:0">
+			<li>Magaerospace</li>
+			<li>Booz Allen and Hamilton</li>
+                        <li>Exelon</li>
+			<li>Baltimore Gas and Electric</li>
+		</ul>
 	<h2 style="margin:0">CERTIFICATIONS</h2>
         <br>
 	<!--	<form>  
